# tradingbot

./: .env.example  .gitignore  ALIGNMENT_SPEC.md  AUDIT_PACKAGE.md  AUDIT_RESPONSE.md  CLAUDE.md  FINDINGS.md  HANDOFF.md  OPTIMIZATION_REPORT.md  README.md  STRESS_TEST_REPORT.md  analyze_trades.py  barchart_download.py  barchart_download_mnq.py  barchart_download_nq.py  barchart_download_nq_contracts.py  barchart_download_nq_full.py  barchart_probe.js  barchart_probe2.js  barchart_probe3.js  chart_viewer.py  download_polygon.py  entry_signal.py  entry_visual.html  exit_comparison.py  exp_1_1_sensitivity.py  exp_2_1_wide_stops.py  exp_2_3_blunting.py  exp_chop_audit.py  exp_chop_detect.py  exp_chop_realtime.py  exp_close_position.py  exp_dynamic_size.py  exp_dynamic_size_nocap.py  exp_dynamic_size_v2.py  exp_early_exit.py  exp_edge_analysis.py  exp_entry_mode.py  exp_entry_redesign.py  exp_entry_rethink.py  (+46 more)
.claude/: settings.local.json
.lab/: PROGRESS.md  RESEARCH_PLAN.md  branches.md  config.md  log.md  ml_filter_results.md  mnq_slippage.md  parking-lot.md
config/: settings.py
configs/: risk_limits.yaml  strategy_params.yaml
data/: QQQ_1Min_2025-09-21_2026-03-21.csv
docs/: RED_BREAKER_REPORT.md  RED_TEAM_REPORT.md  RISK_POLICY.md  STATUS.md  STRATEGY_SPEC.md
experiments/: analyze_chop.py  debug_entry.py  download_2y.py  exp_1_2_random_baseline.py  exp_1_3_alpha_decomp.py  exp_3_framework_sweep.py  exp_3b_deep_diag.py  exp_3c_combos.py  exp_4_bold.py  exp_4_tp_addon.py  exp_5_edge_audit.py  exp_5_validate.py  exp_6_exit_redesign.py  exp_phase1_analysis.py  (+6 more)
(+93 files in other folders)
