[project]
name = "tradingbot"
version = "0.1.0"
description = "YouTube Trading Channel -> Backtestable Trading System"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "yt-dlp>=2024.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tenacity>=8.0",
    "backtrader>=1.9",
    "yfinance>=0.2",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "scripts*"]

[tool.ruff]
line-length = 100
